# job-discovery

./: .env.example  .gitignore  docker-compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260328_01_a13_users_table.py  20260328_02_a14_companies_table.py  20260328_03_a15_company_sources_table.py  20260328_04_a16_jobs_table.py  20260328_05_a17_job_snapshots_table.py  20260328_06_a18_applications_table.py  20260328_07_a19_saved_views_table.py  20260328_08_a20_pipeline_runs_table.py  20260328_09_a21_pipeline_run_events_table.py  20260328_10_a22_query_indexes.py  20260328_11_a55_jobs_missed_sync_count.py  20260329_01_a57_ashby_source_type.py  20260329_02_a58_smartrecruiters_source_type.py  20260329_03_a59_workday_source_type.py  20260329_04_a60_applytojob_source_type.py
backend/src/job_discovery_backend/: app.py  config.py  main.py  startup.py  urls.py
backend/src/job_discovery_backend/db/: base.py  (+6 more)
backend/tests/integration/: test_admin_api.py  test_api_error_envelope.py  test_applications_api.py  test_db_session.py  test_ingestion_correctness.py  test_ingestion_pipeline.py  test_jobs_api.py  test_migration_runner.py  test_schema_migrations.py  test_seed_runner.py  test_summary_api.py  test_views_api.py
backend/tests/smoke/: test_api_health.py
backend/tests/support/: __init__.py  api.py  records.py
backend/tests/unit/: test_api_query_params.py  test_backend_config.py  test_backend_structure.py  test_hardening.py  test_ingestion_adapters.py  test_ingestion_pipeline.py  test_job_filter_parser.py  test_scheduler_config.py  test_scheduler_main.py  test_scheduler_schedule.py  test_worker_config.py
(+98 files in other folders)
