[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Emile Dimas",email = "emiled16@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
