[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Emile Dimas",email = "emiled16@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.16.5,<2.0.0)",
    "SQLAlchemy (>=2.0.43,<3.0.0)",
    "celery[redis] (>=5.5.3,<5.6.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
]

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
